Added missing javadocs and moved to Integer.valueOf